--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+0.7.1
+-----
+- Code cleanup
+- Sidebar and Bootstrap scripts now load in same tag
+- Sidebar improvements
+
 0.7
 ---
 - Bottom menu is now customisable
