--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.7.2
 -----
 - Last bottom link is no longer followed by a pipe
+- Sidebar lock is now called as such (simple renaming)
 
 0.7.1
 -----
