--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 -----
 - Last bottom link is no longer followed by a pipe
 - Sidebar lock is now called as such (simple renaming)
+- Added fork of WP's Recent Posts widget
 
 0.7.1
 -----
