--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+0.8
+---
+- Upcoming Event Widget
+- Blogroll now implemented as a widget
+- Social widget form is now checked for errors of URL placement
+- Social widget form controls now all occur in a new line
+
 0.7.4
 -----
 - Documentation update
