--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 - Social widget form is now checked for errors of URL placement
 - Social widget form controls now all occur in a new line
 - Code reorganisation
+- Bootstrap-based pagination
 
 0.7.4
 -----
